# Leptos.frontend

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  justfile
.github/hooks/: pre-receive
.github/workflows/: continuous_integration.yml  prerelease_deploy.yml  vercel_preview.yml
src/: app.rs  main.rs
src/video/: mod.rs  video_details.rs  videos.rs
