[package]
name = "frontend_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.10", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
